# iron-heart

./: .gitignore  .justfile  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/scripts/: linux_dep.sh
.github/workflows/: build.yml  release.yml
assets/: iron-heart.xcf  linux_dep.sh  nih-activies-demo.webm  nih-demo.webm  resources.rc  vhs-activities.tape  vhs.tape
examples/: http_listener.rs  websocket_dummy.rs
resources/: iron-heart.desktop  resources.rc
src/: activities.rs  app.rs  args.rs  errors.rs  event.rs  handler.rs  heart_rate.rs  heart_rate_ble.rs  heart_rate_dummy.rs  heart_rate_measurement.rs  heart_rate_websocket.rs  lib.rs  logging.rs  macros.rs  main.rs  osc.rs  panic_handler.rs  scan.rs  settings.rs  structs.rs  tui.rs  ui.rs  utils.rs  viewer.rs
src/examples/: websocket_dummy.rs
src/heart_rate/: ble.rs  dummy.rs  measurement.rs  mod.rs  twitcher.rs  websocket.rs
src/logging/: file.rs  mod.rs  prometheus.rs
src/osc/: addresses.rs  hr.rs  mod.rs
src/updates/: mod.rs  tui.rs
src/vrcx/: mod.rs  tui.rs  unix.rs  windows.rs
src/widgets/: action_bar.rs  detail_table.rs  heart_rate_display.rs  info_table.rs  inspect_overlay.rs  mod.rs  prompts.rs  save_prompt.rs
src/widgets/heart_rate/: charts.rs  mod.rs  tables.rs
tests/: bad_config.rs  websocket_to_txt.rs
tests/common/: mod.rs
tests/output/: .gitignore
tests/test_configs/: missing_end_quote.toml  misspelled_bool.toml  websocket_to_txt.toml
