[package]
name = "btlescan"
version = "0.1.1"
edition = "2021"

[dependencies]
btleplug = "0.11"
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
crossterm = "0.22"
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
config = "0.14.0"
serde = "1.0.204"
serde_derive = "1.0.204"
toml = "0.8.14"
rosc = "0.10.1"
color-eyre = "0.6.3"
human-panic = "2.0.0"
libc = "0.2.155"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.63"
log = "0.4.22"
simplelog = "0.12.2"
