[package]
name = "iron-heart"
repository = "https://github.com/nullstalgia/null-iron-heart"
version = "0.2.0"
edition = "2021"
default-run = "iron-heart"

[features]
portable = []

[dependencies]
btleplug = "0.11"
ratatui = "0.28"
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
config = "0.14.0"
serde = "1.0.204"
serde_derive = "1.0.204"
toml = "0.8.14"
rosc = "0.10.1"
color-eyre = "0.6.3"
human-panic = "2.0.0"
libc = "0.2.155"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.63"
log = "0.4.22"
fast_log = "1.6.16"
tokio-util = "0.7.11"
rand = "0.8.5"
csv-async = { version = "1.3.0", features = ["tokio", "with_serde"] }
csv = "1.3.0"
tokio-websockets = { version = "0.8.3", features = [
    "client",
    "server",
    "rand",
    "sha1_smol",
] }
http = "1.1.0"
futures-util = "0.3.30"
serde_json = "1.0.122"
local-ip-address = "0.6.1"
ratatui-macros = "0.4.3"
directories = "5.0.1"
argh = "0.1.12"
