[package]
name = "iron-heart"
repository = "https://github.com/nullstalgia/null-iron-heart"
version = "0.2.0"
edition = "2021"
default-run = "iron-heart"

[features]
# When active, ignores user dotfiles/AppData, using the current directory instead
portable = []

[dependencies]
btleplug = "0.11"
ratatui = "0.28"
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
config = "0.14.0"
serde = "1.0.204"
serde_derive = "1.0.204"
toml = "0.8.14"
rosc = "0.10.1"
color-eyre = "0.6.3"
human-panic = "2.0.0"
libc = "0.2.155"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.63"
tokio-util = "0.7.11"
rand = "0.8.5"
csv-async = { version = "1.3.0", features = ["tokio", "with_serde"] }
csv = "1.3.0"
tokio-websockets = { version = "0.8.3", features = [
    "client",
    "server",
    "rand",
    "sha1_smol",
] }
http = "1.1.0"
futures-util = "0.3.30"
serde_json = "1.0.122"
local-ip-address = "0.6.1"
ratatui-macros = "0.4.3"
directories = "5.0.1"
argh = "0.1.12"
#rat-widget = "0.16.2"
#serde-inline-default = { git = "https://github.com/nullstalgia/serde-inline-default", rev = "91e3db1" }
#serde-inline-default = { path = "../serde-inline-default" }
educe = "0.6.0"
serde_with = "3.9.0"
tui-input = "0.10.1"
tempfile = "3.13.0"
reqwest = { version = "0.12.8", features = ["stream"] }
sha2 = "0.10.8"
self-replace = "1.5.0"
num_enum = "0.7.3"
opener = "0.7.2"
prometheus = "0.13.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-log = "0.2.0"
rolling-file = "0.2.0"


[target.'cfg(windows)'.dependencies]
# Using fork until lilopkins/lnk-rs's #25 and #26 resolve, not sure if #21 is ready yet
# https://github.com/lilopkins/lnk-rs/issues/25
lnk = { git = "https://github.com/isma-xnm/lnk-rs", rev = "0a3d44d" }
# Jeeeez, apparently this one is more mature for *writing*
# I would consider combining the two, but lnk-rs has #21 which would be even better
mslnk = "0.1.8"
self_update = { version = "0.41.0", features = [
    "compression-zip-bzip2",
    "compression-zip-deflate",
] }

[target.'cfg(unix)'.dependencies]
self_update = { version = "0.41.0", features = ["compression-flate2"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.4"

[dev-dependencies]
tokio-tungstenite = "*"
ntest = "*"
tiny_http = "0.12.0"
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
    "unstable",
] }
